gap fix

--- a/force-app/main/default/lwc/textarea/textarea.css
+++ b/force-app/main/default/lwc/textarea/textarea.css
@@ -76,3 +76,7 @@
 .navds-form-field__description {
     color: #555863;
 }
+
+.navds-form-field {
+    gap: 0 !important;
+}
